--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,14 @@
     <string name="app_name">MovieDB</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="home_fragment_title">Home</string>
+    <string name="search_hint">Search The MovieDB</string>
+    <string-array name="home_fragment_pager_title">
+        <item>Popular</item>
+        <item>Top rated</item>
+        <item>Now playing</item>
+        <item>Upcoming</item>
+    </string-array>
 </resources>
