--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="home_fragment_title">Home</string>
     <string name="search_hint">Search The MovieDB</string>
+    <string name="movie_vote_average">Score: </string>
+    <string name="movie_vote_count">Vote count: </string>
+    <string name="json_load_error">Loading failed</string>
     <string-array name="home_fragment_pager_title">
         <item>Popular</item>
         <item>Top rated</item>
