--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
         <item>Casts</item>
         <item>Similar movies</item>
     </string-array>
+    <string name="item_cast_character">As character: </string>
 </resources>
